--- a/css/styles.css
+++ b/css/styles.css
@@ -932,7 +932,8 @@ section.quienesSomos {
 
     .menuTemas {
         margin: 0;
-        padding: 0 !important;
+        padding: 0;
+        width: 100vw;
         &:has(:checked) > .menuMobile {
             display: block;
           
@@ -943,6 +944,10 @@ section.quienesSomos {
             margin: 0;
             padding: 0;
             position: fixed;
+
+            .volver{
+                margin-left: 1em;
+            }
           
         }
 
