--- a/css/styles.css
+++ b/css/styles.css
@@ -22,11 +22,19 @@
 }
 
 :root {
-    --verde-claro: #0cd9ba;
-    --letras-blancas: #fcfcfc;
+    --verde_agua: #0ef7d4;
+    --verde_claro: #0cd9ba;
+    --verde_claro_tenue: #0cd9bad5; 
+    --verde_esmeralda: #135869;
+    --blanco: #fcfcfc;
+    --azul_tenue: #9ab9f9fd;
     --azul_claro: #598ef7;
     --azul_oscuro: #000080;
+    --gris: #6e6e6e;
+    --gris_oscuro: #2c2c2c;
+    --semiTransparente: #fbfdfd22;
     --negro: #141414;
+    --purpura: #9e06d5;
 }
 
 body {
@@ -67,10 +75,10 @@ h5 {
     text-shadow: -5px 5px 5px rgba(0, 0, 0, .3);
     letter-spacing: 2px;
     margin-bottom: 10px;
-    color: white;
+    color: var(--blanco);
 }
 
-/* ****** SECCION INICIO ******* */
+/* ****** Sección INICIO ******* */
 section.inicio {
     display: grid;
     max-width: 100vw;
@@ -84,7 +92,7 @@ section.inicio {
 
     nav {
         grid-area: menu;
-        color: var(--letras-blancas);
+        color: var(--blanco);
         justify-self: center;
         font-size: 1.1em;
         display: grid;
@@ -101,7 +109,6 @@ section.inicio {
             top: 20px;
             right: 20px
         }
-
         .checkbtn {
             font-size: 40px;
             float: right;
@@ -112,9 +119,8 @@ section.inicio {
             top: 45px;
             right: 30px;
         }
-
         ul {
-            background-color: #fbfdfd22;
+            background-color: var(--semiTransparente);
             border-end-end-radius: 10px;
 
             b {
@@ -122,12 +128,11 @@ section.inicio {
                 display: block;
                 background-color: rgba(255, 255, 255, 0.1);
                 letter-spacing: 10px;
-                border: 3px outset #598ef7;
+                border: 3px outset var(--azul_claro);
             }
-
             li {
                 padding: 0 10px;
-                border-bottom: 1px solid white;
+                border-bottom: 1px solid var(--blanco);
                 align-items: center;
                 padding: 15px 20px;
                 cursor: pointer;
@@ -137,11 +142,11 @@ section.inicio {
                 a {
                     text-align: center;
                     padding: 2px;
-                    color: white;
+                    color: var(--blanco);
                 }
-
                 &:hover {
-                    background-color: #00008090;
+                    background-color: var(--azul_oscuro);
+                    filter: opacity(60%);
                     box-shadow: -2px 2px 2px rgba(255, 255, 255, .4);
                 }
             }
@@ -150,7 +155,7 @@ section.inicio {
 
     .centro {
         grid-area: centro;
-        background-color: #0cd9ba;
+        background-color: var(--verde_claro);
         height: fit-content;
         min-height: 97%;
         display: grid;
@@ -169,7 +174,7 @@ section.inicio {
             border: .8px outset #135869;
             border-top-left-radius: 20px;
             border-bottom-right-radius: 20px;
-            background-color: #ffffff;
+            background-color: var(--blanco);
             padding-top: 1px;
             box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.6);
             transition: transform 0.3s ease-in-out infinite;
@@ -209,7 +214,7 @@ section.inicio {
         grid-area: derecha;
         display: grid;
         place-content: center;
-        color: var(--letras);
+        color: var(--blanco);
         font-size: 1.1em;
         line-height: 3;
         margin: 15px;
@@ -220,11 +225,11 @@ section.inicio {
             justify-content: center;
             width: 150px;
             height: 50px;
-            background-color: var(--verde-claro);
+            background-color: var(--verde_claro);
             font-family: 'Roboto', sans-serif;
             font-size: 18px;
             font-weight: bold;
-            border: 3px ridge white;
+            border: 3px ridge var(--blanco);
             cursor: pointer;
             border-start-start-radius: 15px;
             border-end-end-radius: 15px;
@@ -266,7 +271,7 @@ section.inicio {
             }
 
             &:hover span a {
-                color: var(--letras-blancas);
+                color: var(--blanco);
 
                 img {
                     filter: invert(100%)
@@ -275,7 +280,7 @@ section.inicio {
 
             &:active {
                 transform: scale(90%);
-                color: var(--letras-blancas);
+                color: var(--blanco);
             }
         }
     }
@@ -285,23 +290,18 @@ section.inicio {
     0% {
         transform: rotate(8deg);
     }
-
     25% {
         transform: rotate(-8deg);
     }
-
     30% {
         transform: rotate(0deg);
     }
-
     50% {
         transform: rotate(0deg);
     }
-
     75% {
         transform: rotate(-8deg);
     }
-
     100% {
         transform: rotate(8deg);
     }
@@ -309,7 +309,7 @@ section.inicio {
 
 /* ********Sección LIBRERIA DE RECURSOS******** */
 section.libreria {
-    background-color: #0cd9ba;
+    background-color: var(--verde_claro);
     display: grid;
     grid-template-columns: 1fr 3fr;
     height: 100vh;
@@ -317,11 +317,11 @@ section.libreria {
     position: relative;
     grid-template-areas:
         "contenido contenedorEjemplo";
-    padding: 20px 35px 0px 20px;
+    padding: 20px 35px 00px 20px;
 
     .menuTemas {
         grid-area: contenido;
-        color: black;
+        color: var(--negro);
         overflow: hidden;
         justify-self: center;
         font-size: 1.1em;
@@ -379,7 +379,7 @@ section.libreria {
             margin-top: 100px;
             overflow-y: scroll;
             height: calc(100vh - 135px);
-            border: 3px outset #0ef7d4;
+            border: 3px outset var(--verde_agua);
             padding: 0px 15px;
             transition: display 0.5s ease;
 
@@ -396,17 +396,17 @@ section.libreria {
                 }
 
                 p a {
-                    color: black;
+                    color: var(--negro);
                     margin-left: 8px;
                     font-style: italic;
 
                     &:hover {
                         font-weight: bold;
-                        color: #000080
+                        color: var(--azul_oscuro)
                     }
 
                     &:active {
-                        color: #000080;
+                        color: var(--azul_oscuro);
                         background-color: rgba(255, 255, 255, 0.5);
                         padding: 6px;
                     }
@@ -453,43 +453,39 @@ section.libreria {
                 }
             }
         }
-
-        code {
+        .contenidoEjemplo {
             font-family: 'Courier New', Courier, monospace;
             max-width: 100%;
             border: 3px outset var(--azul_oscuro);
             border-radius: 10px;
-            background-color: #2c2c2c;
+            background-color: var(--gris_oscuro);
             line-height: 1.2em;
-            color: #93fbec;
-            position: absolute;
+            color: var(--blanco);
             height: calc(100vh - 100px);
+            margin-top: 12px;
+            padding: 7px
         }
-
-        .hljs {
+        /* .hljs {
             font-size: 1.2em;
-        }
-
+        } */
         .iconoCopy {
             padding: 5px 5px;
             cursor: pointer;
             position: absolute;
             top: 70px;
             right: 5px;
-            background-color: #646363;
+            background-color: var(--gris);
             box-shadow: -2px 2px 2px rgba(0, 0, 0, .3);
-            border: 3px ridge gray;
+            border: 3px ridge var(--gris_oscuro);
             z-index: 1;
 
             img {
                 filter: invert(100%);
             }
-
             &:hover {
-                background-color: #000080;
+                background-color: var(--azul_oscuro);
                 transform: scale(110%);
             }
-
             &:active {
                 transform: scale(95%);
             }
@@ -497,60 +493,64 @@ section.libreria {
     }
 }
 
-/* ************* SECTION ENLACES ************* */
+/* ************* Sección ENLACES ************* */
 section.enlaces {
-    height: 100vh;
     width: 100%;
-    background-color: #598ef7;
-    display: grid;
+    min-height: 100vh;
+    height: auto;
+    background-color: var(--azul_claro);
+    display: block;
     text-align: center;
-    padding: 20px 10px;
+    padding: 20px 20px;
 
-    .volver{
+    .volver {
         padding: 0;
     }
-    p {
-        line-height: 1.8em;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        letter-spacing: 0.05em;
-        color: white;
 
-        &:nth-child(2) {
-            border: 1.5px outset rgba(0, 0, 0, 0.052);
-            padding: 1px 7px;
-            background-color: #0cd9ba;
-            border-radius: 7px rgb(145, 217, 12);
-            color: black;
-            font-family: 'Courier New', Courier, monospace;
-            font-weight: bold;
-            letter-spacing: 0;
+    div.contenido {
+        width: 100%;
+
+        p {
+            line-height: 1.8em;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            letter-spacing: 0.05em;
+            color: var(--blanco);
+
+            &:nth-child(2) {
+                border: 1.5px outset rgba(0, 0, 0, 0.052);
+                padding: 5px 7px;
+                background-color: var(--verde_claro);
+                border-radius: 7px solid var(--verde_agua);
+                color: var(--negro);
+                font-family: 'Courier New', Courier, monospace;
+                font-weight: bold;
+                letter-spacing: 0;
+                overflow-wrap: break-word;
+            }
+
+            img {
+                width: 24px;
+                height: 24px;
+                vertical-align: top;
+                filter: invert(100%);
+            }
         }
+        button {
+            padding: 7px 10px;
+            border: 1px ridge var(--verde_agua);
+            background-color: var(--azul_oscuro);
+            color: var(--blanco);
+            border-radius: 7px;
+            cursor: pointer;
 
-        img {
-            width: 24px;
-            height: 24px;
-            vertical-align: top;
-            filter: invert(100%);
+            &:hover {
+                background-color: var(--verde_esmeralda);
+            }
+            &:active {
+                transform: scale(90%);
+            }
         }
     }
-
-    button {
-        padding: 7px 10px;
-        border: 1px ridge rgb(49, 130, 176);
-        background-color: #000080;
-        color: white;
-        border-radius: 7px;
-        cursor: pointer;
-
-        &:hover {
-            background-color: #135869;
-        }
-
-        &:active {
-            transform: scale(90%);
-        }
-    }
-
     hr {
         width: 70%;
         margin: 1.2rem auto;
@@ -560,18 +560,17 @@ section.enlaces {
 /* ************ CONTRIBUCIÓN ************ */
 section.contribucion {
     width: 100%;
-    height: 100vh;
-    background-color: #0cd9bad5;
+    height: auto;
+    min-height: 100vh;
+    background-color: var(--verde_claro_tenue);
+    display: block;
     text-align: center;
     padding: 10px;
-    padding-bottom: 10px;
-    display: grid;
-    font-size: 1rem;
+    padding-bottom: 20px;
 
     h3 {
         margin-top: 20px
     }
-
     p {
         font-size: 1.1em;
     }
@@ -581,21 +580,21 @@ section.contribucion {
 section.websDeInteres {
     height: auto;
     width: 100%;
-    background-color: #97b7f5;
-    text-align: center;
+    background-color: var(--azul_tenue);
     padding: 10px;
-    padding-bottom: 30px;
-    display: grid;
+    padding-bottom: 50px;
+    display: block;
     font-size: 1rem;
+    text-align: center;
 
     h3 {
-        margin-top: 20px
+        margin-top: 20px;
     }
-
     ol {
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         font-size: 1.1rem;
         margin: 0 200px;
+        overflow-wrap: break-word;
 
         li {
             text-align: left;
@@ -605,11 +604,10 @@ section.websDeInteres {
             cursor: pointer;
 
             &:nth-child(odd) {
-                background-color: #dcdcdc;
+                background-color: var(--blanco);
             }
-
             a {
-                color: blue
+                color: var(--negro)
             }
         }
     }
@@ -619,36 +617,36 @@ section.websDeInteres {
 section.quienesSomos {
     width: 100%;
     height: auto;
-    background-color: #0cd9ba;
+    background-color: var(--verde_claro);
     text-align: center;
     padding: 10px;
     padding-bottom: 50px;
-    display: grid;
-    place-content: center;
+    display: block;
     font-size: 1rem;
 
     h2 {
-        margin-top: 15px;
+        max-width: 1000px;
+        margin: 0 auto;
         text-shadow: -5px 5px 5px rgba(0, 0, 0, .3);
     }
-
     p {
+        max-width: 1000px;
+        margin: auto;
+        margin-bottom: 30px;
         font-size: 1.1em;
-        padding: 10px 200px;
         text-align: justify;
+        hyphens: auto;
+        padding: 0px 20px;
     }
-
     i {
         text-align: center;
         font-size: 1.1em
     }
-
     i span {
-        color: rgb(158, 6, 213);
+        color: var(--purpura);
         font-size: 1.2em;
     }
 }
-
 
 @media (max-width: 1000px) {
     section.inicio {
@@ -673,7 +671,6 @@ section.quienesSomos {
             #check:checked~ul {
                 right: 0;
             }
-
             .checkbtn {
                 display: block;
 
@@ -686,12 +683,11 @@ section.quienesSomos {
                     right: 0px;
                 }
             }
-
             ul {
                 position: fixed;
                 width: 100vw;
                 height: 85vh;
-                background-color: #000080;
+                background-color: var(--azul_oscuro);
                 top: 70px;
                 right: -100vw;
                 text-align: center;
@@ -703,11 +699,10 @@ section.quienesSomos {
                 b {
                     display: none;
                 }
-
                 li {
                     display: grid;
                     margin: 0 auto;
-                    border-bottom: 1px solid #0853e9;
+                    border-bottom: 1px solid var(--azul_claro);
                     letter-spacing: 2px;
 
                     a {
@@ -715,12 +710,11 @@ section.quienesSomos {
                         font-size: 1.4em;
                         display: grid;
                         align-content: space-around;
-                        color: #fff;
+                        color: var(--blanco);
                         padding: 0;
                     }
-
                     &:hover {
-                        background: #598ef786;
+                        background-color: var(--azul_claro);
                     }
                 }
             }
@@ -760,7 +754,6 @@ section.quienesSomos {
         }
     }
 
-    /***** Responsive Section Library *******/
     section.libreria {
         grid-template-rows: 1fr 8fr;
         grid-template-areas:
@@ -784,10 +777,8 @@ section.quienesSomos {
                     filter: opacity(80%);
                     transform: translateX(0);
                 }
-
                 .checkbtn-2 {
                     display: block;
-
                     img {
                         display: block;
                         width: 50px;
@@ -796,9 +787,12 @@ section.quienesSomos {
                         right: 20px;
                     }
                 }
-            }
-            h3 {
-                display: none
+                h5{
+                    margin-left: 30px;
+                }
+                h3 {
+                    display: none;
+                }
             }
             &:has(:checked)>.menuMobile {
                 display: block;
@@ -806,7 +800,7 @@ section.quienesSomos {
             &:has(:checked)>.fijo {
                 width: 100%;
                 line-height: 70px;
-                background-color: #0cd9ba;
+                background-color: var(--verde_claro);
                 padding: 0;
                 position: fixed;
                 top: 0;
@@ -834,23 +828,26 @@ section.quienesSomos {
                 /* transition: display 1s ease-in-out; */
             }
         }
-
         .contenedorEjemplo {
             .botones {
                 button {
                     font-size: 0.9em;
                 }
             }
-            code {
+            .contenidoEjemplo {
+                margin: 12px;
                 overflow: auto;
-                width: calc(100% - 60px);
+                height: calc(100% - 100px);
+                position: absolute;
             }
-            .hljs {
+
+            /* .hljs {
                 margin: 0 20px;
                 font-size: 0.9em;
-            }
+            } */
+
             .iconoCopy {
-                top: 70px;
+                top: 69px;
                 right: 45px;
                 border: 1.5px solid #000080;
                 border-radius: 3px;
@@ -858,38 +855,20 @@ section.quienesSomos {
         }
     }
 
-    /* ******Responsive sección Enlaces****** */
-    section.enlaces {
-        min-height: 100vh;
-        height: auto;
-        .contenido{
-            padding: 0 20px;
-            width: 100%;
-            margin: left;
-
-            background-color: pink;
-
+    section.websDeInteres {
+        ol {
+            margin: 0 30px;
         }
-        p {
+    }
+}
 
-            &:nth-child(2) {
-                /* margin: auto; */
-                /* padding: 0 20px; */
-
-                /* width: 100%; */
-                word-wrap: break-word;
-                overflow-wrap: break-word;
+@media (max-width: 350px) {
+    section.libreria {
+        .contenedorEjemplo {
+            .iconoCopy {
+                top: 106px;
+                right: 28px;
             }
         }
-
-        h5 {
-            padding-left: 60px;
-        }
     }
-
-    /* *******quienes Somos******** */
-    .quienesSomos p {
-        padding: 10px 20px;
-    }
-
-}
+} 
