Lee el archivo WebsInteres.json y lo agrega al front

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
 }
 @font-face {
     font-family: 'Roboto';
-    src: url(fonts/Roboto/Roboto-Regular.ttf) format('trueType');
+    src: url(../fonts/Roboto/Roboto-Regular.ttf) format('trueType');
 }
 
 * {
