--- a/css/websDeInteres.css
+++ b/css/websDeInteres.css
@@ -1,5 +1,6 @@
 section.websDeInteres {
     height: auto;
+    min-height: 100vh;
     width: 100%;
     background-color: var(--azul_tenue);
     padding: 10px;
@@ -8,36 +9,38 @@ section.websDeInteres {
     font-size: 1rem;
     text-align: center;
 
-    h3 {
+    h3.titleLinks {
         margin-top: 20px;
     }
-    ol {
+    
+    ol.listLinks {
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         font-size: 1.1rem;
-        margin: 0 200px;
+        margin: 0 auto;
+        max-width: 800px;
         overflow-wrap: break-word;
+    }
 
-        li {
-            text-align: left;
-            margin-top: 5px;
-            padding: 2px 0px 2px 5px;
-            text-decoration: underline;
-            cursor: pointer;
+    li.li {
+        text-align: left;
+        margin-top: 5px;
+        padding: 2px 0px 2px 5px;
+        text-decoration: underline;
+        cursor: pointer;
+        color: var(--negro);
 
-            &:nth-child(odd) {
-                background-color: var(--blanco);
-            }
-            a {
-                color: var(--negro)
-            }
+        &:nth-child(odd) {
+            background-color: var(--blanco);
         }
+    }
+
+    a.link {
+        color: var(--negro);
     }
 }
 
 @media (max-width: 1000px) {
-    section.websDeInteres {
-        ol {
-            margin: 0 30px;
-        }
+    section.websDeInteres ol.listLinks {
+        margin: 0 30px;
     }
 }
