--- a/css/websDeInteres.css
+++ b/css/websDeInteres.css
@@ -37,7 +37,29 @@ section.websDeInteres {
     a.link {
         color: var(--negro);
     }
+
+    .errorMessage {
+        width: 260px;
+        background-color: #f2bfbf;
+        color: #ff0000;
+        padding: 10px;
+        border: 3px double #ff0000;
+        border-radius: 5px;
+        font-size: 1.1rem;
+        text-align: center;
+        margin: auto;
+        margin-top: 60px;
+        animation: shake 0.5s ease-in-out;
+    }
+    
+    @keyframes shake {
+        0% { transform: translateX(-10px); }
+        50% { transform: translateX(10px); }
+        100% { transform: translateX(-10px); }
+    }
+    
 }
+
 
 @media (max-width: 1000px) {
     section.websDeInteres ol.listLinks {
