--- a/css/enlaces.css
+++ b/css/enlaces.css
@@ -13,6 +13,8 @@ section.enlaces {
 
     div.contenido {
         width: 100%;
+        max-width: 800px;
+        margin: auto;
 
         p {
             line-height: 1.8em;
@@ -57,7 +59,6 @@ section.enlaces {
         }
     }
     hr {
-        width: 70%;
         margin: 1.2rem auto;
     }
 }
