--- a/css/inicio.css
+++ b/css/inicio.css
@@ -47,7 +47,6 @@ section.inicio {
             b {
                 width: 100%;
                 display: block;
-                /* background-color: rgba(255, 255, 255, 0.1); */
                 background-color: var(--azul_oscuro);
                 color: var(--blanco);
                 letter-spacing: 8px;
@@ -57,13 +56,14 @@ section.inicio {
                 padding-bottom: 3px;
             }
             li {
+                font-family:'Roboto', 'Lucida Sans';
                 padding: 0 10px;
                 border-bottom: 1px solid var(--blanco);
                 align-items: center;
                 padding: 15px 20px;
                 cursor: pointer;
                 list-style: none;
-                font-weight: 400;
+                font-weight: 500;
                 &:last-child{
                     border-bottom: 0px solid var(--blanco);
                 }
@@ -109,7 +109,7 @@ section.inicio {
             padding-top: 1px;
             box-shadow: -5px 5px 5px rgba(0, 0, 0, 0.6);
             transition: transform 0.3s ease-in-out infinite;
-            animation: shake 2s linear infinite;
+            animation: shake 2s  infinite;
         }
         div {
             width: 95%;
