agregué botón para Volver al inicio

--- a/css/libreria.css
+++ b/css/libreria.css
@@ -8,8 +8,7 @@ section.libreria {
     grid-template-areas:
         "contenido contenedorEjemplo";
     padding: 20px 20px 0px 20px;
-    /* overflow-x: hidden; */
-
+    overflow: hidden;
 
     .menuTemas {
         width: 100%;
@@ -70,7 +69,7 @@ section.libreria {
             grid-area: listado;
             margin-top: 100px;
             overflow-y: scroll;
-            height: calc(100vh - 135px);
+            height: calc(100vh - 150px);
             border: 3px ridge var(--verde_agua);
             padding: 0px 15px;
             transition: display 0.5s ease;
@@ -117,7 +116,6 @@ section.libreria {
         padding: 20px 0px 0px 20px;
         position: absolute;
 
-
         .botones {
             display: flex;
             width: 100%;
@@ -153,7 +151,7 @@ section.libreria {
         .ejemplo {
             font-family: 'Courier New', Courier, monospace;
             width: 100%;
-            height: calc(100vh - 100px);
+            height: calc(100vh - 115px);
             background-color: var(--gris_oscuro);
             color: var(--verde_agua);
             border: 3px outset var(--azul_oscuro);
@@ -165,7 +163,6 @@ section.libreria {
             font-size: 1.15em;
             tab-size: 2;
         }
-
         
         .iconoCopy {
             padding: 5px 5px;
@@ -173,7 +170,7 @@ section.libreria {
             position: absolute;
             top: 70px;
             right: 35px;
-            background-color: var(--gris);
+            background-color: rgba(128, 128, 128, 0.5);
             box-shadow: -2px 2px 2px rgba(0, 0, 0, .3);
             border: 3px ridge var(--gris_oscuro);
             z-index: 1;
@@ -200,16 +197,15 @@ section.libreria {
         grid-template-areas:
             "contenido"
             "contenedorEjemplo";
-        padding: 15px 20px 20px 20px;
+        padding: 10px 30px 25px 20px;
         justify-content: center;
         height: fit-content;
         overflow-y: auto;
-
+        position: relative;
         ::-webkit-scrollbar {
             background-color: rgba(0, 0, 0, 0.5);
             width: 20px;
         }
-
         ::-webkit-scrollbar-thumb {
             background: rgb(12, 217, 186, 0.5);
             width: 10px;
@@ -229,7 +225,6 @@ section.libreria {
                     filter: opacity(80%);
                     transform: translateX(0);
                 }
-
                 .checkbtn-2 {
                     display: block;
 
@@ -241,11 +236,9 @@ section.libreria {
                         right: 20px;
                     }
                 }
-
                 h5 {
                     margin-left: 30px;
                 }
-
                 h3 {
                     display: none;
                 }
@@ -280,7 +273,7 @@ section.libreria {
                 position: fixed;
                 top: 70px;
                 left: 0;
-                right: 0px;
+                right: 0;
                 height: 100vh;
                 background-color: rgba(0, 0, 0, 0.85);
                 z-index: 5;
@@ -289,33 +282,21 @@ section.libreria {
         }
 
         .contenedorEjemplo {
-            padding: 20px 20px 20px 20px;
-
             .botones {
                 button {
                     font-size: 0.9em;
                 }
             }
-
-            /* code {
-                margin: 0 15px;
-                overflow-wrap: break-word;
-                overflow: auto;
-            } */
-            .ejemplo .contenidoEjemplo {
+            .ejemplo {
                 margin: 12px;
                 overflow: auto;
-                position: absolute;
-                width: 93%;
-                min-height: 75%;
-                height: 75%;
+                width: calc(100% - 40px);
+                height: 89%;
             }
-
-            /* .hljs {
-                font-size: 1.1em;
-            } */
             .iconoCopy {
-                top: 113px;
+                cursor: pointer;
+                position: absolute;
+                top: 30px;
                 right: 55px;
                 border: 1.5px solid #000080;
                 border-radius: 3px;
@@ -324,7 +305,7 @@ section.libreria {
     }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 700px) {
     section.libreria {
         .menuTemas {
             .listado {
@@ -332,52 +313,32 @@ section.libreria {
             }
         }
         .contenedorEjemplo {
-            padding: 20px 10px 20px 20px;
-
-            .iconoCopy {
-                padding: 5px 5px;
-                cursor: pointer;
-                position: absolute;
-                top: 150px;
-                right: 35px;
-                background-color: var(--gris);
-                box-shadow: -2px 2px 2px rgba(0, 0, 0, .3);
-                border: 3px ridge var(--gris_oscuro);
-                z-index: 1;
-
-                img {
-                    filter: invert(100%);
-                }
-
-                &:hover {
-                    background-color: var(--azul_oscuro);
-                    transform: scale(110%);
-                }
-
-                &:active {
-                    transform: scale(95%);
-                }
+            .botones {
+                width: 98%;
             }
-            .ejemplo .contenidoEjemplo{
-                padding: 0;
-                margin: 0;
+            .ejemplo {
                 margin-top: 12px
+            }
+            .iconoCopy {
+                position: absolute;
+                top: 68px;
             }
         }
     }
 }
 @media (max-width: 500px) {
 section.libreria {
-    padding: 10px 0;
+    padding: 10px 0 0 5px ;
 
     .contenedorEjemplo {
-        padding: 20px 5px 5px 5px;
+        padding: 20px 0px 0px 5px;
         .iconoCopy {
-            top: 145px;
+            top: 65px;
         }
-        .ejemplo .contenidoEjemplo{
-            min-height:70%;
-            height: 70%;
+        
+        .ejemplo {
+            min-height:78%;
+            height: 78%;
             margin: 12px
             }
         }
@@ -393,9 +354,9 @@ section.libreria {
 
         .contenedorEjemplo {
             .iconoCopy {
-                right: 20px;
+                right: 15px;
             }
-            .ejemplo .contenidoEjemplo{
+            .ejemplo{
                 margin: 12px;
             }
         }
