--- a/css/inicio.css
+++ b/css/inicio.css
@@ -2,6 +2,7 @@ section.inicio {
     display: grid;
     max-width: 100vw;
     min-height: 100vh;
+    height: auto;
     grid-template-columns: 1.2fr 2.5fr 1fr;
     grid-template-areas:
         "menu centro derecha";
@@ -10,6 +11,7 @@ section.inicio {
     padding-bottom: 50px;
 
     nav {
+        height: 100vh;
         grid-area: menu;
         color: var(--azul_oscuro);
         justify-self: center;
@@ -56,7 +58,7 @@ section.inicio {
                 padding-bottom: 3px;
             }
             li {
-                font-family:'Roboto', 'Lucida Sans';
+                font-family: 'Lucida Sans';
                 padding: 0 10px;
                 border-bottom: 1px solid var(--blanco);
                 align-items: center;
@@ -64,6 +66,7 @@ section.inicio {
                 cursor: pointer;
                 list-style: none;
                 font-weight: 500;
+                
                 &:last-child{
                     border-bottom: 0px solid var(--blanco);
                 }
@@ -72,6 +75,7 @@ section.inicio {
                     padding: 2px;
                     color: var(--azul_oscuro);
                     display: block;
+                    font-size: 1.1rem;
                     &:hover{
                         color: var(--blanco);
                     }
