agregué imagen-ico a la pestaña y corregí unas medidas en la webs de interés en modo responsive

--- a/css/websDeInteres.css
+++ b/css/websDeInteres.css
@@ -64,3 +64,8 @@ section.websDeInteres {
         margin: 0 30px;
     }
 }
+@media (max-width: 650px) {
+    section.websDeInteres details {
+        padding-left: 15px;
+    }
+}
