--- a/css/libreria.css
+++ b/css/libreria.css
@@ -197,7 +197,7 @@ section.libreria {
         grid-template-areas:
             "contenido"
             "contenedorEjemplo";
-        padding: 10px 30px 25px 20px;
+        padding: 10px 20px 25px 20px;
         justify-content: center;
         height: fit-content;
         overflow-y: auto;
@@ -288,9 +288,8 @@ section.libreria {
                 }
             }
             .ejemplo {
-                margin: 12px;
                 overflow: auto;
-                width: calc(100% - 40px);
+                width: calc(100% - 20px);
                 height: 89%;
             }
             .iconoCopy {
@@ -316,9 +315,6 @@ section.libreria {
             .botones {
                 width: 98%;
             }
-            .ejemplo {
-                margin-top: 12px
-            }
             .iconoCopy {
                 position: absolute;
                 top: 68px;
@@ -331,15 +327,14 @@ section.libreria {
     padding: 10px 0 0 5px ;
 
     .contenedorEjemplo {
-        padding: 20px 0px 0px 5px;
+        padding: 20px 0px 0px 15px;
         .iconoCopy {
-            top: 65px;
+            right: 50px
         }
         
         .ejemplo {
             min-height:78%;
             height: 78%;
-            margin: 12px
             }
         }
     }
@@ -354,10 +349,7 @@ section.libreria {
 
         .contenedorEjemplo {
             .iconoCopy {
-                right: 15px;
-            }
-            .ejemplo{
-                margin: 12px;
+                right: 28px;
             }
         }
     }
