--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@
     box-sizing: border-box;
     transition: .3s ease all;
     text-decoration: none;
+    scroll-behavior: smooth;
 }
 
 :root {
@@ -125,6 +126,7 @@ h5 {
     padding: 5px;
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s;
     img{
         width: 2.5em;
         height: 2.5em;
@@ -138,6 +140,7 @@ h5 {
     
 }
 
+/* Para borrar div q se genera automáticamente al final de la página */
 #loom-companion-mv3{
     display: none;
 }
